(COMPILA) arranca, aunque clickeas cualquier cosa en la pagina web y explota todo, de momento solo funciona el index con las tabs, el header no anda, y ningun caso de uso al menos lo pocquisimo que probe